Added: Linux Accessibility Resources

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         Resources</a>. </li>
       <li><a href="GameAccessibilityResources.html">Game Accessibility
         Resources</a>. </li>
+      <li><a href="LinuxAccessibilityResources.html">Linux Accessibility
+        Resources</a>. </li>
     </ul>
   </div><!-- end #main -->
 
