+ Video: A First Look at Building Windows 10 Universal Apps

--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -117,6 +117,11 @@
       <li>Microsoft Developer Network (<abbr>MSDN</abbr>): <a
         href="https://msdn.microsoft.com/en-us/library/windows/apps/hh700407.aspx">Guidelines
         for designing accessible apps</a>. </li>
+      <li>Clint Rutkas: <a href="http://channel9.msdn.com/Shows/Inside-Windows-Platform/A-First-Look-at-Building-Windows-10-Universal-Applications">
+        A First Look at Building Windows 10 Universal Apps</a>, 
+        <abbr title="Microsoft Developer Network">MSDN</abbr> Channel 9, 24 March 2015.
+        (Video of 46 minutes; available under Creative Commons.) 
+      </li>
     </ul>
     
     <h2>Java Mobile Accessibility</h2>
