+ YouTube: cost of lack of game accessibility

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -34,6 +34,10 @@
         <ul>
           <li><strong><a href="http://www.includification.com/">Includification -
             Actionable Game Accessibility</a></strong>.</li>
+          <li><a href="https://www.youtube.com/watch?v=zI2XZ3lJgDk">
+            What Is Your Lack of Game Accessibility Costing You?</a>
+            (YouTube video, almost 4 minutes long.)
+          </li>
         </ul>
       </li>
       <li><strong><a href="http://www.specialeffect.org.uk/">Special Effect: The
