added: dedicated Linux distributions

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -14,9 +14,11 @@
   </div><!-- end #header -->
 
   <div id="main">
+    <h2>General Linux Accessibility Resources</h2>
     <ul>
       <li>Sharon Snider: 
         <strong><a href="http://www.tldp.org/HOWTO/Accessibility-Dev-HOWTO/">How to Develop Accessible Linux Applications</a></strong> (<abbr>IBM</abbr>, 2002).
+        Also available on <a href="http://www.faqs.org/docs/Linux-HOWTO/Accessibility-Dev-HOWTO.html">faqs.org</a>.
       </li>
       <li>The GNOME Project: <strong>
         <a href="https://developer.gnome.org/accessibility-devel-guide/">GNOME Accessibility Developers Guide</a>
@@ -31,6 +33,16 @@
       <li><span lang="fr">Samuel Thibault</span>: <a
         href="http://brl.thefreecat.org/wiki/Installer">Accessibility Tips: Installer</a>: 
         about accessible installers.
+      </li>
+    </ul>
+
+    <h2>Specific Linux Distributions</h2>
+    <ul>
+      <li><a href="http://sonargnulinux.com/">Sonar <abbr>GNU</abbr>/Linux</a>:
+        a Linux distribution that focuses on assistive technologies.
+      </li>
+      <li><a href="http://vinuxproject.org/">Vinux</a>:
+        a Linux distribution based on Ubuntu that is optimised for the needs of blind and partially sighted users.
       </li>
     </ul>
   </div><!-- end #main -->
