Added: GUI toolkit accessibility resources

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         Resources</a>. </li>
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility
         Resources</a>. </li>
+      <li><a href="GUIAccessibilityResources.html">
+        <abbr title="graphical user interface">GUI</abbr>
+        Toolkit Accessibility Resources</a>. </li>
     </ul>
   </div><!-- end #main -->
 
