--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -57,7 +57,7 @@
     href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility
     Resources</a></span> by <a xmlns:cc="http://creativecommons.org/ns#"
     href="http://cstrobbe.github.io/AccessibilityResources/"
-    rel="cc:attributionURL">Christophe Strobbe</a> is licenced under a <a
+    rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a <a
     xml:lang="en-US" lang="en-US" rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
     Attribution-ShareAlike 4.0 International License</a>. </p>
