--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -161,7 +161,7 @@
       <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" property="dct:title" rel="dct:type"><a href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility Resources</a></span> 
       by 
       <a xmlns:cc="http://creativecommons.org/ns#" href="http://cstrobbe.github.io/AccessibilityResources/" property="cc:attributionName" rel="cc:attributionURL">Christophe Strobbe</a> 
-      is licenced under a 
+      is licensed under a 
       <a lang="en-US" rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
     </p>
     <p>You can <a href="https://github.com/cstrobbe/AccessibilityResources">fork the code</a> on GitHub.</p>
