--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -36,13 +36,24 @@
       </li>
     </ul>
 
-    <h2>Specific Linux Distributions</h2>
+    <h2>Specific Linux Distributions and Desktop Environments</h2>
     <ul>
       <li><a href="http://sonargnulinux.com/">Sonar <abbr>GNU</abbr>/Linux</a>:
         a Linux distribution that focuses on assistive technologies.
       </li>
       <li><a href="http://vinuxproject.org/">Vinux</a>:
         a Linux distribution based on Ubuntu that is optimised for the needs of blind and partially sighted users.
+      </li>
+      <li><a href="http://mate-desktop.org/">MATE Desktop Environment</a>. 
+        <a href="https://en.wikipedia.org/wiki/MATE_%28software%29">MATE</a> 
+        is a fork of the now unmaintained GNOME 2. 
+        When the GNOME Project released GNOME 3, much of the accessibility work had to be redone.
+        For this reason, many people with disabilities continued using GNOME 2 and,
+        more recently, MATE.
+        Some consider MATE the best choice for users with serious visual impairments (including blindness).
+        (However, GNOME 3 has a better magnifier and a black-on-white contrast theme.)
+        <a href="http://www.linuxmint.com/">Linux Mint</a> includes 
+        <a href="http://blog.linuxmint.com/?p=2713">MATE as one of its default desktop environments</a>.
       </li>
     </ul>
   </div><!-- end #main -->
