Fedora has MATE Compiz spin

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -54,6 +54,8 @@
         (However, GNOME 3 has a better magnifier and a black-on-white contrast theme.)
         <a href="http://www.linuxmint.com/">Linux Mint</a> includes 
         <a href="http://blog.linuxmint.com/?p=2713">MATE as one of its default desktop environments</a>.
+        Fedora also has a 
+        <a href="https://spins.fedoraproject.org/mate-compiz/">MATE Compiz spin</a>.
       </li>
     </ul>
   </div><!-- end #main -->
