More Linux projects and articles (opensource.com)

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -34,16 +34,18 @@
         href="http://brl.thefreecat.org/wiki/Installer">Accessibility Tips: Installer</a>: 
         about accessible installers.
       </li>
+      <li>Spencer Hunley: <a href="http://opensource.com/life/15/4/6-reasons-people-disabilities-should-use-linux">
+        6 reasons people with disabilities should use Linux</a>,
+        Opensource.com, 20 April 2015.
+      </li>
+      <li>Kendell Clark: <a href="http://opensource.com/life/15/5/accessibility-linux">
+        Accessibility in Linux is good (but could be much better)</a>,
+        Opensource.com, 4 May 2015.
+      </li>
     </ul>
 
     <h2>Specific Linux Distributions and Desktop Environments</h2>
     <ul>
-      <li><a href="http://sonargnulinux.com/">Sonar <abbr>GNU</abbr>/Linux</a>:
-        a Linux distribution that focuses on assistive technologies.
-      </li>
-      <li><a href="http://vinuxproject.org/">Vinux</a>:
-        a Linux distribution based on Ubuntu that is optimised for the needs of blind and partially sighted users.
-      </li>
       <li><a href="http://mate-desktop.org/">MATE Desktop Environment</a>. 
         <a href="https://en.wikipedia.org/wiki/MATE_%28software%29">MATE</a> 
         is a fork of the now unmaintained GNOME 2. 
@@ -56,6 +58,32 @@
         <a href="http://blog.linuxmint.com/?p=2713">MATE as one of its default desktop environments</a>.
         Fedora also has a 
         <a href="https://spins.fedoraproject.org/mate-compiz/">MATE Compiz spin</a>.
+      </li>
+      <li><a href="http://sonargnulinux.com/">Sonar <abbr>GNU</abbr>/Linux</a>:
+        a Linux distribution that focuses on assistive technologies.
+      </li>
+      <li><a href="http://vinuxproject.org/">Vinux</a>:
+        a Linux distribution based on Ubuntu that is optimised for the needs of blind and partially sighted users.
+      </li>
+      <li><a href="http://www.knopper.net/knoppix-adriane/index-en.html">
+        <abbr>ADRIANE</abbr> - Audio Desktop Reference Implementation and Networking Environment</a>:
+        &ldquo;ADRIANE is an easy-to-use, talking desktop system with optional support for braille, 
+        which can be used entirely without vision oriented output devices.&rdquo;
+      </li>
+      <li><a href="https://wiki.archlinux.org/index.php/TalkingArch">
+        TalkingArch</a>: 
+        TalkingArch is a bootable CD or USB image optimised for blind users. 
+        The system stars speaking at boot time.
+        TalkingArch is not an official release of the Arch Linux project.
+      </li>
+      <li><a href="http://www.linux-speakup.org/projects.html">
+        The SpeakUp Project</a> &amp;
+        <a href="http://www.linux-speakup.org/speakup.html">
+        SpeakUp</a>: 
+        &ldquo;a screen review package for the Linux operating system&rdquo;.
+        SpeakUp is available for Debian, Fedora and a few other
+        <a href="http://www.linux-speakup.org/distros.html">distributions</a>,
+        but it seems that there have been no updates since 2010. 
       </li>
     </ul>
   </div><!-- end #main -->
