Link to new page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <li><a href="GUIAccessibilityResources.html">
         <abbr title="graphical user interface">GUI</abbr>
         Toolkit Accessibility Resources</a>. </li>
+      <li><a href="WebAppAccessibilityResources.html">
+        Web Application Accessibility Resources</a>
+      </li>
     </ul>
   </div><!-- end #main -->
 
