--- a/index.html
+++ b/index.html
@@ -18,16 +18,20 @@
   <div id="main">
     <ul>
       <li><a href="MobileAccessibilityResources.html">Mobile Accessibility
-        Resources</a>. </li>
+        Resources</a>.
+      </li>
       <li><a href="GameAccessibilityResources.html">Game Accessibility
-        Resources</a>. </li>
+        Resources</a>.
+      </li>
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility
-        Resources</a>. </li>
+        Resources</a>.
+      </li>
       <li><a href="GUIAccessibilityResources.html">
         <abbr title="graphical user interface">GUI</abbr>
-        Toolkit Accessibility Resources</a>. </li>
+        Toolkit Accessibility Resources</a>.
+      </li>
       <li><a href="WebAppAccessibilityResources.html">
-        Web Application Accessibility Resources</a>
+        Web Application Accessibility Resources</a>.
       </li>
     </ul>
   </div><!-- end #main -->
