Add page Web Accessibility Tools

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       <li><a href="WebAppAccessibilityResources.html">
         Web Application Accessibility Resources</a>.
       </li>
+      <li><a href="WebAccessibilityTools.html">
+        Web Accessibility Tools</a>.
+      </li>
     </ul>
   </div><!-- end #main -->
 
