Quote markup instead of quote marks

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -71,6 +71,14 @@
             2015.</li>
         </ul>
       </li>
+      <li>Anastasia Salter:
+        "<a href="http://chronicle.com/blogs/profhacker/making-accessible-games-with-twine-audio/60143">
+        Making Accessible Games with Twine Audio</a>", ProfHacker, 19 May 2015.
+        (<a href="http://twinery.org/">Twine</a> is 
+        <q cite="http://twinery.org/">an open-source tool for telling interactive, nonlinear stories</q>;
+        <a href="http://twineaudio.com/">Twine Audio</a> is
+        <q cite="http://twineaudio.com/">extension that adds audio to the Twine interactive fiction engine</q>.)
+      </li>
       <li>Powers, George M.; Nguyen, Vinh; Frieden, Lex M.: "<a
         href="http://dsq-sds.org/article/view/4513/3833">Video Game Accessibility:
         A Legal Approach</a>", Disability Studies Quarterly, Vol. 35, No. 1
