--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -67,8 +67,9 @@
       </li>
       <li><a href="http://www.knopper.net/knoppix-adriane/index-en.html">
         <abbr>ADRIANE</abbr> - Audio Desktop Reference Implementation and Networking Environment</a>:
-        &ldquo;ADRIANE is an easy-to-use, talking desktop system with optional support for braille, 
-        which can be used entirely without vision oriented output devices.&rdquo;
+        <q cite="http://www.knopper.net/knoppix-adriane/index-en.html">ADRIANE 
+        is an easy-to-use, talking desktop system with optional support for braille, 
+        which can be used entirely without vision oriented output devices.</q>
       </li>
       <li><a href="https://wiki.archlinux.org/index.php/TalkingArch">
         TalkingArch</a>: 
@@ -80,7 +81,8 @@
         The SpeakUp Project</a> &amp;
         <a href="http://www.linux-speakup.org/speakup.html">
         SpeakUp</a>: 
-        &ldquo;a screen review package for the Linux operating system&rdquo;.
+        <q cite="http://www.linux-speakup.org/projects.html">a screen review 
+        package for the Linux operating system</q>.
         SpeakUp is available for Debian, Fedora and a few other
         <a href="http://www.linux-speakup.org/distros.html">distributions</a>,
         but it seems that there have been no updates since 2010. 
