--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -66,7 +66,8 @@
       <li><abbr>AOL</abbr> Access: 
         <a href="http://access.aol.com/dhtml-style-guide-working-group/">
         <abbr>DHTML</abbr> Style Guide Working Group</a>:
-        &ldquo;recommendation for keyboard shortcuts to be used in website widgets&rdquo;.
+        <q cite="http://access.aol.com/dhtml-style-guide-working-group/">recommendation 
+        for keyboard shortcuts to be used in website widgets</q>.
       </li>
       <li>Mozilla Developer Network (<abbr>MDN</abbr>):
         <a href="https://developer.mozilla.org/en-US/docs/Web/Accessibility/ARIA">
