--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -77,6 +77,16 @@
         The system stars speaking at boot time.
         TalkingArch is not an official release of the Arch Linux project.
       </li>
+      <li><a href="http://handylinux.org/index-en.html">HandyLinux</a>:
+        a Debian-based distribution aimed at beginners, elderly people and anyone
+        who needs simplicity. 
+        Version 2 of this distribution was released on 
+        <a href="http://blog.handylinux.org/article190/handylinux-2-0-est-disponible-au-telechargement">
+        16 May 2015</a>; 
+        <a href="http://blog.handylinux.org/article192/handylinuxlight-2-0-est-disponible">HandyLinuxLight-2.0</a>
+        was released on 23 May 2015.
+        (Note: the installation procedure might not be easy enough for beginners.)
+      </li>
       <li><a href="http://www.linux-speakup.org/projects.html">
         The SpeakUp Project</a> &amp;
         <a href="http://www.linux-speakup.org/speakup.html">
