--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -108,7 +108,7 @@
     href="http://purl.org/dc/dcmitype/Text"><a
     href="http://cstrobbe.github.io/AccessibilityResources/">Accessibility
     Resources</a></span> by <a xmlns:cc="http://creativecommons.org/ns#"
-    href="http://cstrobbe.github.io/AccessibilityResources/"
+    href="https://github.com/cstrobbe"
     rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a <a
     xml:lang="en-US" lang="en-US" rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
