--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -72,9 +72,9 @@
         </ul>
       </li>
       <li>Anastasia Salter:
-        "<a href="http://chronicle.com/blogs/profhacker/making-accessible-games-with-twine-audio/60143">
-        Making Accessible Games with Twine Audio</a>", ProfHacker, 19 May 2015.
-        (<a href="http://twinery.org/">Twine</a> is 
+        &ldquo;<a href="http://chronicle.com/blogs/profhacker/making-accessible-games-with-twine-audio/60143">
+        Making Accessible Games with Twine Audio</a>&rdquo;, ProfHacker, 19 May 2015.
+        <br />(<a href="http://twinery.org/">Twine</a> is 
         <q cite="http://twinery.org/">an open-source tool for telling interactive, nonlinear stories</q>;
         <a href="http://twineaudio.com/">Twine Audio</a> is
         <q cite="http://twineaudio.com/">extension that adds audio to the Twine interactive fiction engine</q>.)
@@ -92,9 +92,9 @@
           <li><a
             href="http://jams.gamejolt.io/accessibilityjam/resources">Accessibility
             Jam (11 May - 1 June)</a>.</li>
-          <li>Ian Hamilton: "<a
+          <li>Ian Hamilton: &ldquo;<a
             href="http://ian-hamilton.com/starting-points-for-accessibility-themed-jams-and-competitions/">Accessibility
-            in jams #1: accessibility themed jams and competitions</a>", Ian
+            in jams #1: accessibility themed jams and competitions</a>&rdquo;, Ian
             Hamilton's blog, 9 November 2013.</li>
         </ul>
       </li>
@@ -104,7 +104,7 @@
   <div id="footer">
     <p id="licence"><a rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/"><img
-    alt="Creative Commons License" style="border-width:0"
+    alt="Creative Commons License Attribution-ShareAlike" style="border-width:0"
     src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /> </a> <br />
     <span xmlns:dct="http://purl.org/dc/terms/"
     href="http://purl.org/dc/dcmitype/Text"><a
