--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -103,7 +103,7 @@
   <div id="footer">
     <p id="licence"><a rel="license"
     href="http://creativecommons.org/licenses/by-sa/4.0/"><img
-    alt="Creative Commons License" style="border-width:0"
+    alt="Creative Commons License Attribution-ShareAlike" style="border-width:0"
     src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /> </a> <br />
     <span xmlns:dct="http://purl.org/dc/terms/"
     href="http://purl.org/dc/dcmitype/Text"><a
