Added: BlindComputerGames.com & AudioGames.net

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -71,6 +71,19 @@
             2015.</li>
         </ul>
       </li>
+      <li><a href="http://www.blindcomputergames.com/guidelines/guidelines.html"
+        >Guidelines for Building Blind-Accessible Computer Games</a>:
+        this is a set of mostly Windows-centric guidelines created by 
+        <a href="http://www.7128.com/about.html">7-128 Software</a>, 
+        a company that develops computer games.
+        <br />The guidelines also link to a few
+        <a href="http://www.blindcomputergames.com/howto/howto.html">Technical How To's</a> 
+        and some
+        <a href="http://www.blindcomputergames.com/samplegames/samplegames.html">Example Games</a>.
+        <br />7-128 Software's website also has a 
+        <a href="http://www.7128.com/resources.html">Resources Page</a> 
+        with links to guidelines, research, tools, etcetera.
+      </li>
       <li>Anastasia Salter:
         &ldquo;<a href="http://chronicle.com/blogs/profhacker/making-accessible-games-with-twine-audio/60143">
         Making Accessible Games with Twine Audio</a>&rdquo;, ProfHacker, 19 May 2015.
@@ -97,6 +110,14 @@
             in jams #1: accessibility themed jams and competitions</a>&rdquo;, Ian
             Hamilton's blog, 9 November 2013.</li>
         </ul>
+      </li>
+      <li>
+        <a href="http://www.audiogames.net/resources/">AudioGames.net: Resources</a>:
+        AudioGames.net is a website dedicated to audio games and blind-accessible games.
+        Audio games are 
+        <q cite="http://www.audiogames.net/">computer games who's main output is sound rather than graphics</q>.
+        <br />See also the websites's 
+        <a href="http://www.audiogames.net/frequently-asked-questions/">Frequently Asked Questions</a>.
       </li>
     </ul>
   </div><!-- end #main -->
