Page has new subdivisions

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -14,6 +14,7 @@
   </div><!-- end #header -->
 
   <div id="main">
+    <h2>Guidelines and Organisations</h2>
     <ul>
       <li><strong><a href="http://igda-gasig.org/"><abbr
         title="International Game Developers Association">IGDA</abbr> Game
@@ -84,22 +85,6 @@
         <a href="http://www.7128.com/resources.html">Resources Page</a> 
         with links to guidelines, research, tools, etcetera.
       </li>
-      <li>Anastasia Salter:
-        &ldquo;<a href="http://chronicle.com/blogs/profhacker/making-accessible-games-with-twine-audio/60143">
-        Making Accessible Games with Twine Audio</a>&rdquo;, ProfHacker, 19 May 2015.
-        <br />(<a href="http://twinery.org/">Twine</a> is 
-        <q cite="http://twinery.org/">an open-source tool for telling interactive, nonlinear stories</q>;
-        <a href="http://twineaudio.com/">Twine Audio</a> is
-        <q cite="http://twineaudio.com/">extension that adds audio to the Twine interactive fiction engine</q>.)
-      </li>
-      <li>Powers, George M.; Nguyen, Vinh; Frieden, Lex M.: "<a
-        href="http://dsq-sds.org/article/view/4513/3833">Video Game Accessibility:
-        A Legal Approach</a>", Disability Studies Quarterly, Vol. 35, No. 1
-      (2015).</li>
-      <li>Daniel Starky: "<a
-        href="http://www.polygon.com/2015/2/10/8012451/games-have-basic-huge-accessibility-problems-that-we-celebrate">Games
-        have basic, huge accessibility problems (that we celebrate)</a>", 10
-        February 2015.</li>
       <li>Accessibility Jams: 
         <ul>
           <li><a
@@ -120,6 +105,43 @@
         <a href="http://www.audiogames.net/frequently-asked-questions/">Frequently Asked Questions</a>.
       </li>
     </ul>
+
+    <h2>Articles and Blogposts</h2>
+    <ul>
+      <li>Anastasia Salter:
+        &ldquo;<a href="http://chronicle.com/blogs/profhacker/making-accessible-games-with-twine-audio/60143">
+        Making Accessible Games with Twine Audio</a>&rdquo;, ProfHacker, 19 May 2015.
+        <br />(<a href="http://twinery.org/">Twine</a> is 
+        <q cite="http://twinery.org/">an open-source tool for telling interactive, nonlinear stories</q>;
+        <a href="http://twineaudio.com/">Twine Audio</a> is
+        <q cite="http://twineaudio.com/">extension that adds audio to the Twine interactive fiction engine</q>.)
+      </li>
+      <li>Powers, George M.; Nguyen, Vinh; Frieden, Lex M.: "<a
+        href="http://dsq-sds.org/article/view/4513/3833">Video Game Accessibility:
+        A Legal Approach</a>", Disability Studies Quarterly, Vol. 35, No. 1
+      (2015).
+      </li>
+      <li>Daniel Starky: "<a
+        href="http://www.polygon.com/2015/2/10/8012451/games-have-basic-huge-accessibility-problems-that-we-celebrate">Games
+        have basic, huge accessibility problems (that we celebrate)</a>", 10
+        February 2015.
+      </li>
+    </ul>
+
+    <h2>Examples of Accessible Games</h2>
+    <ul>
+      <li><a href="https://github.com/matatk/agrip"><abbr 
+        title="Accessible Gaming Rendering Independence Possible"></abbr>AudioQuake 
+        and Level Description Language</a>.
+        <br />This is an open-source project to create an first-person shooter
+        (<abbr>FPS</abbr>) that is accessible to blind and vision-impaired gamers.
+        <br />To download the game, go to 
+        <a href="http://tbrn.andrelouis.com/modgirl/">Jedi Quake</a> (a mod of AudioQuake).
+        <br />For more background, visit 
+        <a href="http://agrip.org.uk/">The <abbr>AGRIP</abbr> Project</a>.
+      </li>
+    </ul>
+
   </div><!-- end #main -->
 
   <div id="footer">
