prep for nav list

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -11,6 +11,13 @@
 <body>
   <div id="header">
     <h1><span class="h1txt">Game Accessibility Resources</span></h1>
+    <!--ul class="nav">
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+      <li><a href=""></a></li>
+    </ul-->
   </div><!-- end #header -->
 
   <div id="main">
