links for nav list

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -12,11 +12,11 @@
   <div id="header">
     <h1><span class="h1txt">Game Accessibility Resources</span></h1>
     <!--ul class="nav">
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
-      <li><a href=""></a></li>
+      <li><a href="MobileAccessibilityResources.html"></a></li>
+      <li><a href="GameAccessibilityResources.html"></a></li>
+      <li><a href="LinuxAccessibilityResources.html"></a></li>
+      <li><a href="GUIAccessibilityResources.html"></a></li>
+      <li><a href="WebAppAccessibilityResources.html"></a></li>
     </ul-->
   </div><!-- end #header -->
 
