links for nav list: link titles

--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -12,11 +12,12 @@
   <div id="header">
     <h1><span class="h1txt">Game Accessibility Resources</span></h1>
     <!--ul class="nav">
-      <li><a href="MobileAccessibilityResources.html"></a></li>
-      <li><a href="GameAccessibilityResources.html"></a></li>
-      <li><a href="LinuxAccessibilityResources.html"></a></li>
-      <li><a href="GUIAccessibilityResources.html"></a></li>
-      <li><a href="WebAppAccessibilityResources.html"></a></li>
+      <li><a href="MobileAccessibilityResources.html" title="Mobile Accessibility">Mobile</a></li>
+      <li><a href="GameAccessibilityResources.html" title="Game Accessibility">Games</a></li>
+      <li><a href="LinuxAccessibilityResources.html" title="Linux Accessibility">Linux</a></li>
+      <li><a href="GUIAccessibilityResources.html" title="GUI Toolkit Accessibility"><abbr title="graphical user interface">GUI</abbr> Toolkits</a></li>
+      <li><a href="WebAppAccessibilityResources.html" title="Web Application Accessibility">Web Applications</a></li>
+      <li><a href="WebAccessibilityTools.html" title="Web Accessibility Tools">Tools</a></li>
     </ul-->
   </div><!-- end #header -->
 
