New section: browser extensions for end users

--- a/WebAccessibilityTools.html
+++ b/WebAccessibilityTools.html
@@ -255,7 +255,13 @@
         deficiencies. 
       </li>
     </ul>
-    
+
+    <h2>Browser Extensions for End Users</h2>
+    <ul>
+      <li><a href="http://chronic-illness-support.tumblr.com/post/121510449113/chrome-extensions-for-disabilities-masterpost">chrome extensions for disabilities masterpost</a>
+        (June 2015): a list of extensions for people with reading disabilities.
+      </li>
+    </ul>
 
   </div><!-- end #main -->
 
