--- a/GameAccessibilityResources.html
+++ b/GameAccessibilityResources.html
@@ -127,7 +127,13 @@
       <li>Powers, George M.; Nguyen, Vinh; Frieden, Lex M.: "<a
         href="http://dsq-sds.org/article/view/4513/3833">Video Game Accessibility:
         A Legal Approach</a>", Disability Studies Quarterly, Vol. 35, No. 1
-      (2015).
+        (2015).
+        <br />
+        Note that in the <abbr>USA</abbr>, communication functionality in games 
+        will need to be accessible for people with disabilities starting
+        8 0ctober 2015: 
+        <a href="http://www.cooley.com/video-game-accessibility-requirements-starting-october">New
+        Video Game Accessibility Requirements Starting in October</a> (15 June 2015). 
       </li>
       <li>Daniel Starky: "<a
         href="http://www.polygon.com/2015/2/10/8012451/games-have-basic-huge-accessibility-problems-that-we-celebrate">Games
