--- a/elearning.html
+++ b/elearning.html
@@ -46,7 +46,7 @@
       <li><a href="http://www.aemanet.eu/en"><abbr>AEMA</abbr></a>:
         Adult Education Made Easy.<br />
         <a href="http://www.aemanet.eu/en/aemanews/accessibility-criteria-providers-adult-education-european-countries">Accessibility 
-        Criteria for Providers of Adult Education in European Countries <abbr>PDF</abbr></a>.</li>
+        Criteria for Providers of Adult Education in European Countries (<abbr>PDF</abbr>)</a>.</li>
     </ul>
 
     <!--h2>...</h2>
