HandyLinux 2 (French) is based on Debian 8

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -78,9 +78,9 @@
         TalkingArch is not an official release of the Arch Linux project.
       </li>
       <li><a href="http://handylinux.org/index-en.html">HandyLinux</a>:
-        a Debian-based distribution aimed at beginners, elderly people and anyone
-        who needs simplicity. 
-        Version 2 of this distribution was released on 
+        a Debian-based French distribution aimed at beginners, elderly people 
+        and anyone who needs simplicity. 
+        Version 2 of this distribution is based on Debian 8 and was released on 
         <a href="http://blog.handylinux.org/article190/handylinux-2-0-est-disponible-au-telechargement">
         16 May 2015</a>; 
         <a href="http://blog.handylinux.org/article192/handylinuxlight-2-0-est-disponible">HandyLinuxLight-2.0</a>
