More details about HandyLinux 2.0

--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -80,9 +80,24 @@
       <li><a href="http://handylinux.org/index-en.html">HandyLinux</a>:
         a Debian-based French distribution aimed at beginners, elderly people 
         and anyone who needs simplicity. 
-        Version 2 of this distribution is based on Debian 8 and was released on 
+        Version 2, which was released on 
         <a href="http://blog.handylinux.org/article190/handylinux-2-0-est-disponible-au-telechargement">
-        16 May 2015</a>; 
+        16 May 2015</a>,
+        is based on Debian 8, although it is only available as a 32-bit version. 
+        It uses <a href="http://www.xfce.org/">Xfce</a> a desktop environment
+        and includes the <a href="https://wiki.gnome.org/Projects/Orca">Orca screen reader</a> 
+        (which is part of GNOMEShell), a screen magnifier, an on-screen keyboard 
+        and simplified menus.
+        <br />
+        See the 
+        <a href="http://wiki.handylinux.org/doku.php/en/access">Accessibility Tools</a>
+        page for more information about the included assistive technologies. 
+        See the
+        <a href="http://wiki.xfce.org/releng/4.10/roadmap/accessibility">Accessibility 
+        in Xfce Core 4.10 Roadmap</a>
+        for more information about accessibility in Xfce. 
+        (Version 4.10 is no longer the most recent version.)
+        <br />
         <a href="http://blog.handylinux.org/article192/handylinuxlight-2-0-est-disponible">HandyLinuxLight-2.0</a>
         was released on 23 May 2015.
         (Note: the installation procedure might not be easy enough for beginners.)
