--- a/WebAppAccessibilityResources.html
+++ b/WebAppAccessibilityResources.html
@@ -5,7 +5,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Web Application Accessibility Resources</title>
-  <link rel="stylesheet" media="screen" href="css/verdemoderna.css" />
+  <link rel="stylesheet" media="screen" href="css/stuttgartbib.css" title="default" />
+  <link rel="stylesheet" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
 </head>
 
 <body>
