--- a/MobileAccessibilityResources.html
+++ b/MobileAccessibilityResources.html
@@ -5,8 +5,8 @@
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <title>Mobile Accessibility Resources</title>
-  <link rel="stylesheet" media="screen" href="css/stuttgartbib.css" title="default" />
-  <link rel="stylesheet" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
+  <link rel="stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
 </head>
 
 <body>
