typo; tilde encoded as %7E

--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -27,8 +27,8 @@
 
     <h2>Research and Papers</h2>
     <ul>
-      <li>von Ahn, Luis; Ginosar, Shiry; Kedia, Mmihir; Blum, Manuel (2006): 
-        &ldquo;<a href="http://www.cs.cmu.edu/~biglou/Phetch.pdf">Improving Accessibility of the Web with a Computer Game (<abbr>PDF</abbr>)</a>&rdquo;, 
+      <li>von Ahn, Luis; Ginosar, Shiry; Kedia, Mihir; Blum, Manuel (2006): 
+        &ldquo;<a href="http://www.cs.cmu.edu/%7Ebiglou/Phetch.pdf">Improving Accessibility of the Web with a Computer Game (<abbr>PDF</abbr>)</a>&rdquo;, 
         <abbr title="Association for Computing Machinery">ACM</abbr> <abbr>CHI</abbr> Notes 2006.
         <br />Note: access to 
         <a href="https://en.wikipedia.org/wiki/Phetch">Phetch</a>, 
