New page: content management (CMS)
New page about content management systems (CMS).
CSS: smaller h1 except on homepage.

--- a/index.html
+++ b/index.html
@@ -11,19 +11,37 @@
   <!-- See also https://help.github.com/articles/user-organization-and-project-pages/ -->
 </head>
 
-<body>
+<body id="home">
   <div id="header">
     <h1><span class="h1txt">Accessibility Resources</span></h1>
   </div><!-- end #header -->
 
   <div id="main">
+    <h2>Web</h2>
+    <ul>
+      <li><a href="WebAppAccessibilityResources.html">Web 
+        Application Accessibility Resources</a>.
+      </li>
+      <li><a href="WebAccessibilityTools.html">Web 
+        Accessibility Tools</a>.
+      </li>
+      <li><a href="elearning.html">Accessibility 
+        in e-Learning</a>.
+      </li>
+      <li><a href="contentmanagement.html">Content 
+        Management Systems (<abbr>CMS</abbr>)</a>
+      </li>
+    </ul>
+
+    <h2>Mobile</h2>
     <ul>
       <li><a href="MobileAccessibilityResources.html">Mobile Accessibility
         Resources</a>.
       </li>
-      <li><a href="GameAccessibilityResources.html">Game Accessibility
-        Resources</a>.
-      </li>
+    </ul>
+
+    <h2>Desktop</h2>
+    <ul>
       <li><a href="LinuxAccessibilityResources.html">Linux Accessibility
         Resources</a>.
       </li>
@@ -31,20 +49,19 @@
         <abbr title="graphical user interface">GUI</abbr>
         Toolkit Accessibility Resources</a>.
       </li>
-      <li><a href="WebAppAccessibilityResources.html">
-        Web Application Accessibility Resources</a>.
-      </li>
-      <li><a href="WebAccessibilityTools.html">
-        Web Accessibility Tools</a>.
-      </li>
-      <li><a href="elearning.html">
-        Accessibility in e-Learning</a>.
+    </ul>
+
+    <h2>Other</h2>
+    <ul>
+      <li><a href="GameAccessibilityResources.html">Game Accessibility
+        Resources</a>.
       </li>
       <li>
         <a href="crowdsourcing.html">Accessibility, Crowdsourcing 
         and Human-Based Computation</a>
       </li>
     </ul>
+
   </div><!-- end #main -->
 
   <div id="footer">
