two more articles

--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -49,8 +49,9 @@
         This articles briefly discusses WordPress, Drupal, Posterous and Joomla,
         and concludes that WordPress and Drupal would be the best out of these four systems.
       </li>
-      <!--li>@@:
-        <a href="http://2011.rmll.info/L-accessibilite-Web-des-CMS">@@</a>
+      <li><span lang="fr">Yannick Pavard&nbsp;:
+        <a href="http://2011.rmll.info/L-accessibilite-Web-des-CMS">L’accessibilité Web dans les <abbr>CMS</abbr></a>
+        </span>,
         presentation at <abbr>RMLL</abbr> 2011.
       </li-->
       <li><span lang="fr">Élie Sloïm:
@@ -58,10 +59,10 @@
         accessibilité des <abbr>CMS</abbr>&nbsp;: un point avant les <abbr>RMLL</abbr></a></span>,
         1 July 2010. 
       </li>
-      <!--li>Nicolas Steenhout:
-        <a href="http://accessibility.net.nz/blog/web-accessibility-and-content-management-systems/">@@</a>,
-        Open Source Developers Conference, Sydney, 2008.
-      </li-->
+      <li>Nicolas Steenhout:
+        <a href="http://accessibility.net.nz/blog/web-accessibility-and-content-management-systems/">Web Accessibility and Content Management Systems</a>,
+        text of a presentation at the Open Source Developers Conference, Sydney, 2008.
+      </li>
     </ul>
 
     <h2>Individual <abbr>CMS</abbr>s</h2>
@@ -174,8 +175,9 @@
       <a href="http://typo3.org/download/release-notes/typo3-47-release-notes/">release notes of an older version</a>.
     </p>
 
-    <h3>Webdragon</h3>
-    <p><!-- homepage CMS -->The developers of this system claim(ed) that they had put a lot of
+    <h3>Webdragon<abbr>CMS</abbr></h3>
+    <p>(Homepage: <a href="http://www.webdragon.com.au/main-site/webdragoncms">www.webdragon.com.au/main-site/webdragoncms</a>.)
+      The developers of this system claim(ed) that they had put a lot of
       effort in the accessibility of their <abbr>CMS</abbr>: see 
       <a href="http://www.webdragon.com.au/main-site/welcome/how-accessible-is-your-website-039-s-cms;storyId,6268">How 
       accessible is your website's <abbr>CMS</abbr>?</a> (15 November 2010).
