+ page with accessibility guidelines

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
     <h2>Other</h2>
     <ul>
+      <li><a href="accessibilityguidelines.html">Accessibility Guidelines</a>
+      </li>
       <li><a href="GameAccessibilityResources.html">Game Accessibility
         Resources</a>.
       </li>
