+ Neos; + WP blog PerceptionSystem

--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -148,6 +148,14 @@
       </span>
     </p>
 
+    <h3>Neos</h3>
+    <p>(Homepage: <a href="https://www.neos.io/">www.neos.io</a>.)<br />
+      See: Tobias Gruber: 
+      <a href="https://www.neos.io/news/neos-website-gets-accessibility-certification.html">Neos 
+      website gets <abbr>WCAG</abbr> 2.0 accessibility certification</a>, 17 July 2015.
+      The website contains no other accessibility-related information.
+    </p>
+
     <h3>Redaxo</h3>
     <p>(Homepage: <a href="http://www.redaxo.org/">www.redaxo.org</a>.)
       Redaxo is a German <abbr>CMS</abbr>. Its website has no accessibility
@@ -204,6 +212,10 @@
       <li>Brenda Barron:
         <a href="http://www.elegantthemes.com/blog/tips-tricks/how-to-make-your-wordpress-website-more-accessible">How 
         to Make Your WordPress Website More Accessible</a>, 26 August 2014.
+      </li>
+      <li><a href="http://blogs.perceptionsystem.com/maximize-wordpress-accessibility">10
+        Ways To Maximize Your WordPress Site Accessibility</a>, Perception Blog, 
+        3 April 2014.
       </li>
       <li> Siobhan McKeown:
         <a href="http://premium.wpmudev.org/blog/25-ways-to-make-your-wordpress-website-more-accessible/">25 
