--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -4,14 +4,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <title>Content Management Systems</title>
+  <title>Accessibility in Content Management Systems</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/stuttgartbib.css" title="default" />
   <link rel="stylesheet" type="text/css" media="screen" href="css/verdemoderna.css" title="alternative stylesheet (green)" />
 </head>
 
 <body>
   <div id="header">
-    <h1><span class="h1txt">Content Management Systems (<abbr>CMS</abbr>)</span></h1>
+    <h1><span class="h1txt">Accessibility in Content Management Systems (<abbr>CMS</abbr>)</span></h1>
   </div><!-- end #header -->
 
   <div id="main">
