--- a/LinuxAccessibilityResources.html
+++ b/LinuxAccessibilityResources.html
@@ -113,6 +113,18 @@
         <a href="http://www.linux-speakup.org/distros.html">distributions</a>,
         but it seems that there have been no updates since 2010. 
       </li>
+      <li><a href="http://luwrain.org/">The accessible environment Luwrain</a>
+        <q>Luwrain is a set of software components on Java for accessible
+        user interface construction.</q>
+        The 
+        <a href="https://github.com/luwrain/luwrain">source code</a> (on GitHub) 
+        is available under the 
+        <a href="https://github.com/luwrain/luwrain/blob/master/LICENSE" 
+        lang="en-US"><abbr>GNU</abbr> General Public License version 3</a>.
+        See also Michael Pozhidaev's presentation
+        <a href="https://2014.rmll.info/conference272?lang=en">Luwrain, a text-based <abbr>OS</abbr> for blind people</a>
+        at <abbr lang="fr" title="Rencontres Mondiales du Logiciel Libre">RMLl</abbr> 2014. 
+      </li>
     </ul>
   </div><!-- end #main -->
 
