--- a/contentmanagement.html
+++ b/contentmanagement.html
@@ -268,6 +268,22 @@
       lang="de">Webkrauts</a>.
     </p>
 
+    <h3>SilverStripe</h3>
+    <p>(Homepage: <a href="http://www.silverstripe.org/">www.silverstripe.org</a>.)
+      See
+      <a href="https://userhelp.silverstripe.org/en/3.1/for-website-content-editors/web-content-best-practises/#making-your-content-accessible">Making
+      your content accessible</a> in the &ldquo;Web content best practices&rdquo;.
+    </p>
+    <ul>
+      <li>
+        <a href="https://github.com/joshkosmala/silverstripe-tenon">silverstripe-tenon</a>:
+        <q cite="https://github.com/joshkosmala/silverstripe-tenon"> Check the 
+        accessibility of your SilverStripe site with this module that integrates with Tenon</q>.
+        Licence: <a href="https://github.com/joshkosmala/silverstripe-tenon/blob/master/LICENSE"
+        lang="en-US"><abbr>MIT</abbr> License</a>.
+      </li>
+    </ul>
+
     <h3>SPIP</h3>
     <p>(Homepage: <a href="http://www.spip.net/fr_rubrique91.html">www.spip.net</a>.)
       This <abbr>CMS</abbr> is &ldquo;<span lang="fr">incontournable</span>&rdquo; 
@@ -306,9 +322,18 @@
       <a href="https://wordpress.org/themes/tags/accessibility-ready/">&ldquo;accessibility-ready&dquo;
       themes</a> in the WordPress theme directory.
       <br />
-      Articles and blog posts:
+      Articles, blog posts and tools:
     </p>
     <ul>
+      <li>Joe Dolson: 
+        <a href="https://github.com/joedolson/access-monitor">Access Monitor</a>:
+        <q cite="https://github.com/joedolson/access-monitor/blob/master/readme.txt">Test 
+        your WordPress site for accessibility compliance. Run on-demand tests or 
+        schedule a weekly accessibility check.</q>
+        Licence: 
+        <a href="https://github.com/joedolson/access-monitor/blob/master/gpl.txt"><abbr>GNU</abbr> 
+        <abbr lang="en-US" title="General Public License">GPL</abbr> version 3</a>.
+      </li>
       <li>Sami Keijonen:
         <a href="https://poststatus.com/how-to-create-accessible-wordpress-themes/">How
         to create better, more accessible WordPress themes</a>, 13 May 2015.
