+ Intro Jared Smith

--- a/accessibilityguidelines.html
+++ b/accessibilityguidelines.html
@@ -62,6 +62,15 @@
     See e.g. ADOD
     -->
 
+    <h2>Introductions to Accessibility</h2>
+    <ul>
+      <li>Jared Smith: 
+        <a href="https://www.youtube.com/watch?v=Eqc0vGf0aI0">Web
+        Accessibility Fundamentals</a> (YouTube video with subtitles), 
+        JavaScript Accessibility Summit 2013.
+    </ul>
+
+
   </div><!-- end #main -->
 
   <div id="footer">
