--- a/elearning.html
+++ b/elearning.html
@@ -50,11 +50,19 @@
         Criteria for Providers of Adult Education in European Countries (<abbr>PDF</abbr>)</a>.</li>
     </ul>
 
-    <!--h2>...</h2>
-    <p>...: 
-      "<a href="...">...</a>" 
-      (February 2003).
-    </p-->
+    <h2>Accessibility Checkers and Other Tools</h2>
+    <ul>
+      <li><abbr title="Dependable Systems Laboratory">DSLab</abbr>, 
+        <abbr lang="fr" title="École polytechnique fédérale de Lausanne">EPFL</abbr>: 
+        <a href="https://github.com/dslab-epfl/accessibility-checker">Moodle accessibility checker plugin</a>: 
+        <q cite="https://github.com/dslab-epfl/accessibility-checker#introduction">This 
+        moodle plugin encourages teachers to make accessible course material by 
+        checking, each time they upload a <abbr>PDF</abbr> file, if it is accessible.</q>
+        Licence: 
+        <a href="https://github.com/dslab-epfl/accessibility-checker/blob/master/COPYING.txt"><abbr>GNU</abbr> 
+        <abbr lang="en-US" title="General Public License">GPL</abbr> version 3</a>. 
+      </li>
+    </ul>
   </div><!-- end #main -->
 
   <div id="footer">
